# elfutils

./: .gitignore  Makefile.am  configure.ac  portable-byteswap.h  portable-tdestroy.h
backends/: i386_auxv.c  ppc_attrs.c  ppc_auxv.c  ppc_cfi.c  ppc_initreg.c  ppc_regs.c
config/: eu.am
debuginfod/: Makefile.am  debuginfod-client.c
gnulib/: .gitignore  Makefile.am
lib/: Makefile.am  eu-config.h  obstack_printf.h  portable-tdestroy.c  system.h
libasm/: Makefile.am  asm_begin.c
libcpu/: Makefile.am  i386_data.h  i386_parse.y  riscv_disasm.c
libdw/: Makefile.am  cie.c  dwarf_end.c  dwarf_getalt.c  dwarf_getlocation.c  dwarf_getmacros.c  dwarf_getsrc_file.c  dwarf_getsrclines.c  fde.c  frame-cache.c  libdwP.h  libdw_findcu.c
libdwelf/: Makefile.am
libdwfl/: Makefile.am  argp-std.c  cu.c  dwfl_module.c  dwfl_module_getsrc_file.c  dwfl_segment_report_module.c  find-debuginfo.c  libdwflP.h  link_map.c
libebl/: eblauxvinfo.c  eblcorenote.c  eblopenbackend.c
libelf/: Makefile.am  elf_end.c  elf_getdata_rawchunk.c  elf_getshdrnum.c  elf_getshdrstrndx.c  elf_update.c  libelfP.h
m4/: gnulib-cache.m4  gnulib-comp.m4
po/: de.po  es.po  ja.po  pl.po  uk.po
src/: Makefile.am  addr2line.c  ar.c  arlib.h  elflint.c  findtextrel.c  nm.c  objdump.c  ranlib.c  readelf.c  size.c  srcfiles.cxx  stack.c  strings.c  strip.c  unstrip.c
